syntax = "proto3";

option go_package = "github.com/recommendation/services/core/application/product/dto";

import "product/product.model.proto";

package dto;

message GetProductDetailReq {
  string user_id = 1; // TODO change user_id to header, detect from bearer token
  int64 product_id = 2;
}

message GetProductDetailResp {
  model.Product product = 1;
}

message GetRecommendationForUserReq {
  string user_id = 1; // TODO change to header
  int32 limit = 2;
}

message GetRecommendationForUserResp {
  repeated int64 product_ids = 1;
}