syntax = "proto3";

package service;

option go_package = "github.com/recommendation/services/core/application/product/service";

import "product/product.dto.proto";
import "google/api/annotations.proto";


service ProductService {
  rpc GetProductDetail(dto.GetProductDetailReq) returns (dto.GetProductDetailResp) {
    option (google.api.http) = {
      post: "/v1/product/detail" // TODO change method to GET, detect user_id from header, product_id from url
      body: "*"
    };
  }
  rpc GetRecommendationForUser(dto.GetRecommendationForUserReq) returns (dto.GetRecommendationForUserResp){
    option (google.api.http) = {
      post: "/v1/product/user/recommendation" // TODO change method to GET, detect user_id from header
      body: "*"
    };
  }
}
